# Autonomous-Codebase-Refactoring-Agent

./: .gitignore  README.md  pyproject.toml
config/: agent_config.toml
src/refactor_agent/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py
src/refactor_agent/analyzers/: ast_analyzer.py
src/refactor_agent/git_utils/: workflow.py
src/refactor_agent/llm/: client.py
src/refactor_agent/runners/: test_runner.py
tests/: __init__.py  conftest.py  test_ast_analyzer.py  test_cli.py  test_config.py  test_git_workflow.py  test_integration.py  test_llm_client.py  test_report_generator.py  test_test_runner.py
tests/fixtures/: legacy_code.py
